--- a/front-end/src/app/views/signup/signup.component.html
+++ b/front-end/src/app/views/signup/signup.component.html
@@ -131,6 +131,7 @@
 
     <div class="my-3">
       <input
+      (click)="onSubmit()"
       class="btn btn-lg btn-success w-100 mt-2"
       type="submit"
       value="Crear Cuenta"
