--- a/front-end/src/app/components/confirm/confirm.component.html
+++ b/front-end/src/app/components/confirm/confirm.component.html
@@ -48,7 +48,7 @@
       <!-- Submit button -->
       <button
         type="submit"
-        class="btn btn-outline-success btn-block mb-4"
+        class="btn btn-success btn-block mb-4"
         [disabled]="confirmForm.invalid"
       >
         Confirmar Cuenta
