--- a/front-end/src/app/components/carrito/carrito.component.html
+++ b/front-end/src/app/components/carrito/carrito.component.html
@@ -92,7 +92,7 @@
               <p class="card-text">${{total}}</p>
             </div>
           </div>
-          <button type="submit" class="btn btn-success btn-block w-100 mb-5">
+          <button type="submit" class="btn btn-success btn-block w-100 mb-5" (click)="guardarPedido()">
             Confirmar compra
           </button>
         </div>
