--- a/front-end/src/app/components/carrito/carrito.component.html
+++ b/front-end/src/app/components/carrito/carrito.component.html
@@ -87,7 +87,7 @@
           </div>
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">{{ carrito.productos.length }} Productos en total</h5>
+              <h5 class="card-title">{{ cantidad }} Productos en total</h5>
               <!-- <p class="card-text">Transporte: $200</p> -->
               <p class="card-text">${{total}}</p>
             </div>
